--- a/style.css
+++ b/style.css
@@ -4,17 +4,16 @@
 }
 
 body {
-  background-color: #000000b9;
-  color: white;
-  background-image:  url("https://picsum.photos/200/300") ;
+  background-color: #5e5e5eb7;
+  color: rgb(0, 0, 0);
+  background-image:  url("https://picsum.photos/200/300");
   background-size: 100%;
   background-blend-mode: overlay;
-  background-attachment: fixed;
 }
 
 a {
   text-decoration: none;
-  color: #bebebe;
+  color: #000000;
   border-style:solid;
   border-width: 0.5px;
   border-radius:7px;
@@ -22,7 +21,7 @@ a {
 }
 
 h2 {
-  color: rgb(214, 214, 214);
+  color: rgb(163, 163, 163);
   -webkit-user-select:none;
   -moz-user-select:none;
   -ms-user-select:none;
@@ -30,8 +29,8 @@ h2 {
 }
 
 a:hover {
-  color:white;
-  background-color: rgba(255, 255, 255, 0.26);
+  color:rgb(255, 255, 255);
+  background-color: rgb(97, 97, 97);
 }
 
 ul {
@@ -41,7 +40,7 @@ ul {
 
 ul li {
   display: flex;
-  background-color: #afafaf;
+  background-color: #f0f0f0;
   color: #000000;
   justify-content:space-between;
   align-items: center;
@@ -55,10 +54,6 @@ ul li {
   -moz-user-select:none;
   -ms-user-select:none;
   user-select:none
-}
-
-ul li:hover {
-  filter:brightness(116%)
 }
 
 li {
@@ -77,7 +72,7 @@ li {
 }
 
 .next:hover {
-  color: rgb(1, 27, 44);
+  color: rgb(28, 77, 110);
 }
 
 #t-input {
@@ -97,7 +92,7 @@ li {
 }
 
 .header {
-  color: #e2e2e2;
+  color: #272727;
   border-radius: 5px;
   padding:10px 30px;
   text-align:center;
@@ -147,7 +142,7 @@ li {
   margin-top:.5%;
   padding:0 10px;
   border-radius:5px;
-  background-color: #79797959;
+  background-color: #ffffff;
   background-blend-mode: overlay;
 }
 
@@ -155,7 +150,6 @@ li {
   .row{flex-direction:column}
   .next{transform: rotate(90deg)}
   .col{text-align: left;}
-  ul li:hover {filter:none;}
   .quote {font-size: 12px;}
   .header {text-align: left;font-size: 90%;padding-left: 5px;}
 }
