--- a/app/style.css
+++ b/app/style.css
@@ -1,4 +1,4 @@
-*{ 
+*{
   font-family:monospace;
   box-sizing:border-box
 }
@@ -6,6 +6,10 @@
 a {
   text-decoration: none;
   color: #9c9c9c;
+}
+
+#main-top a {
+  color:#001418
 }
 
 h2 {
@@ -73,6 +77,17 @@ li {
 }
 
 .next:hover {
+  color: black;
+}
+
+.prev {
+  min-width:29px;
+  text-align: center;
+  float:right;
+  color:rgb(109, 109, 109);
+}
+
+.prev:hover {
   color: black;
 }
 
@@ -160,5 +175,6 @@ li {
 @media screen and (max-width:640px) {
   .row{flex-direction:column}
   .next{transform: rotate(90deg)}
+  .prev{transform: rotate(90deg)}
   .col{text-align: left;}
 }
